Bug 51856: Allow selection of just part of a text input or textarea to increase the karma around people who make typos. r=jst@netscape.com